    * Create a temporary GNUPGHOME to avoid “gpg --list-key” erroring when no
      ~/.gnupg exists.  (Closes: #776209)
  * bts: Cancel the mail if the spawned editor exits with a non-zero exit
    code.  This is an alternative way to cancel a command, rather than saving
    an empty message.  (Closes: #778648)
  * who-permits-upload: Update URL to use https.

  [ Johannes Schauer ]
  * chdist: Also set Apt::Architectures to prevent foreign architectures from
    the host leaking into the apt tree (Closes: #774685)

  [ Iain Lane ]
  * rmadison: The short option for --regex is -r, not -s.

  [ Fabian Greffrath ]
  * wrap-and-sort: Add dirs, docs, examples, info, links, maintscript and
    manpages (all can also be prefixed by the binary package name) to the
    files in the debian/ directory that get sorted alphabetically.
    (Closes: #765338)

  [ Ian Jackson ]
  * grep-excuses:
    + Minor manpage corrections.  (Closes: #777344)
    + Add --debug option.  (Closes: #777345)
    + Search for autoremovals too, by default.  (Closes: #777346)

 -- James McCoy <jamessan@debian.org>  Sat, 03 Jan 2015 00:47:36 -0500

devscripts (2.15.1) unstable; urgency=medium

  [ Julien Cristau ]
  * grep-excuses: update URLs to use https://release.debian.org/

  [ David Prévot ]
  * French translation update

 -- James McCoy <jamessan@debian.org>  Thu, 01 Jan 2015 09:50:36 -0500

devscripts (2.14.11) unstable; urgency=medium

  [ Paul Wise ]
  * Suggest debbindiff for deep .deb comparisons
  * Use mirror.ftp-master instead of specific hostnames

  [ James McCoy ]
  * debcommit: Correctly show --strip-message is the default in --help.
    (Closes: #766885)
  * mk-origtargz: Warn about unmatched Files-Excluded patterns.  (Closes:
    #766641)
  * annotate-output: Fix handling of a date format that contains whitespace.
    (Closes: #766180)
  * Fix regression in dpkg-architecture using scripts when only -a or -t is
    specified, rather than both or neither.  (Closes: #768587)
